--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -130,21 +130,22 @@
 
 	<build>
 		<extensions>
-			<!-- Ensure OS compatibility for protoc -->
+			<!-- Detecta sistema operacional para o protoc -->
 			<extension>
 				<groupId>kr.motd.maven</groupId>
 				<artifactId>os-maven-plugin</artifactId>
 				<version>1.7.0</version>
 			</extension>
 		</extensions>
+
 		<plugins>
-			<!-- Spring boot / maven  -->
+			<!-- Spring Boot Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<!-- PROTO -->
+			<!-- Protobuf e gRPC -->
 			<plugin>
 				<groupId>org.xolstice.maven.plugins</groupId>
 				<artifactId>protobuf-maven-plugin</artifactId>
@@ -162,6 +163,24 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<!-- Lombok + Compiler -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.38</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
